<resources>
    <string name="app_name">The Movie DB</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="home_fragment_title">Home</string>
    <string name="search_hint">Search The MovieDB</string>
    <string name="movie_vote_average">Score: </string>
    <string name="movie_vote_count">Vote count: </string>
    <string name="json_load_error">Loading failed</string>
    <string-array name="home_fragment_pager_title">
        <item>Popular</item>
        <item>Top rated</item>
        <item>Now playing</item>
        <item>Upcoming</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="fragment_info_title">Title:</string>
    <string name="fragment_info_status">\nStatus:</string>
    <string name="fragment_info_release_date">\nRelease date:</string>
    <string name="fragment_info_tagline">Tagline:</string>
    <string name="fragment_info_overview">\nOverview:</string>
    <string name="fragment_info_genres">\nGenres:</string>
    <string name="fragment_info_production_company">Production Companies:</string>
    <string-array name="movie_detail_activity_pager_title">
        <item>Info</item>
        <item>Casts</item>
        <item>Similar movies</item>
    </string-array>
    <string name="item_cast_character">As character: </string>
    <string name="nav_view_home_title">Home</string>
    <string name="nav_view_my_watchlist_title">My watchlist</string>
    <string name="nav_view_my_favorite_title">My favorite</string>
    <string name="nav_view_my_list_title">My list</string>
    <string name="nav_view_discover_title">Discover</string>
    <string name="nav_view_companies_title">Companies</string>
    <string name="nav_header_login">Login</string>
    <string name="nav_view_logout_title">Log out</string>
    <string name="login_failed">Login failed</string>
    <string name="login_successfully">Login successfully</string>
    <string name="authenticating_message">Please wait</string>
    <string name="get_info_failed">Cannot get account\'s info.</string>
    <string name="my_watchlist_tb_title">My watchlist</string>
    <string name="my_favorite_tb_title">My favorite</string>
    <string name="discover_fragment_tb_title">Discover</string>
    <string name="popularity_desc">Popularity Descending</string>
    <string name="popularity_asc">Popularity Ascending</string>
    <string name="release_date_desc">Release Date Descending</string>
    <string name="release_date_asc">Release Date Ascending</string>
    <string name="vote_average_desc">Rating Descending</string>
    <string name="vote_average_asc">Rating Ascending</string>
    <string name="original_title_desc">Original Title (A-Z)</string>
    <string name="original_title_asc">Original Title (Z-A)</string>
    <string-array name="sort_by_array">
        <item>@string/popularity_desc</item>
        <item>@string/popularity_asc</item>
        <item>@string/release_date_desc</item>
        <item>@string/release_date_asc</item>
        <item>@string/vote_average_desc</item>
        <item>@string/vote_average_asc</item>
        <item>@string/original_title_desc</item>
        <item>@string/original_title_asc</item>
    </string-array>
    <string name="spinner_select_none">None</string>
    <string name="fragment_discover_sort_label">Sort by:</string>
    <string name="fragment_discover_year_label">Year: </string>
    <string name="fragment_discover_genre_label">Genre: </string>
    <string name="empty_list_message">Nothing to show</string>
</resources>
