<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view_home_item"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_view_home_title"/>
        <item
            android:id="@+id/nav_view_discover_item"
            android:icon="@drawable/ic_discover"
            android:title="@string/nav_view_discover_title"/>
        <item
            android:id="@+id/nav_view_my_list_item"
            android:title="@string/nav_view_my_list_title">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_view_my_favorite_item"
                        android:icon="@drawable/ic_favorite"
                        android:title="@string/nav_view_my_favorite_title"/>
                    <item
                        android:id="@+id/nav_view_my_watchlist_item"
                        android:icon="@drawable/ic_watchlist"
                        android:title="@string/nav_view_my_watchlist_title"/>
                    <item
                        android:id="@+id/nav_view_logout_item"
                        android:title="@string/nav_view_logout_title"/>
                </group>
            </menu>
        </item>
    </group>
</menu>