<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/fragment_discover_sort_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/fragment_discover_spn_sort_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/fragment_discover_year_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/fragment_discover_spn_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/fragment_discover_genre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/fragment_discover_spn_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_discover_fl_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
